[gd_scene load_steps=5 format=3 uid="uid://y3f0yvohs0o5"]

[ext_resource type="Script" uid="uid://cyvoofoa17v1q" path="res://hud.gd" id="1_37p78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
bg_color = Color(0.8882043, 0.26651996, 0.16122106, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
bg_color = Color(0.7348076, 0.5274311, 0.6466432, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ContainerCoracoes" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 36.0
offset_bottom = 36.0

[node name="FocoTimerUI" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(200, 20)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -90.0
offset_right = 540.0
offset_bottom = 10.0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_37p78")
theme_override_styles/fill = SubResource("StyleBoxFlat_64ctp")
show_percentage = false

[node name="NotificacaoLabel" type="Label" parent="."]
visible = false
offset_left = 2993.0
offset_top = 1487.0
offset_right = 4215.0
offset_bottom = 1820.0
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_8sq4i")
text = "Sinergia Ativada!
BALUARTE DA ALMA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NotificacaoTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="NotificacaoTimer" to="." method="_on_notificacao_timer_timeout"]
